<resources>
    <string name="app_name">Geardo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_main_activity_toolbar">Search product</string>
    <string name="latest">LATEST</string>
    <string name="most_viewed">MOST VIEWED</string>
    <string name="trendy">TRENDY</string>
    <string name="on_sale">ON SALE</string>
    <string name="related">RELATED</string>
    <string name="overview">OVERVIEW</string>
    <string name="search_hint">search Geardo</string>
    <string name="action_empty">Empty Cart</string>
    <string name="action_small">Small Grid</string>
    <string name="action_medium">Medium Grid</string>
    <string name="action_large">Large Grid</string>
    <string name="action_scroll_zero">Scroll Home</string>
    <string name="action_smooth_zero">Smooth Scroll Home</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="deals">Deals</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="share">Share this item</string>
    <string name="facebook_app_id">1169532166417577</string>
    <string name="action_sign_in_short">Agree &amp; Create Account</string>
    <string name="email">Email</string>
    <string name="email_hint">Email*("Confirm" link will be sent)</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_email_hint">Confirm Email</string>
    <string name="firstname">Display Name</string>
    <string name="lastname">Last Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_create_account">Password*(6-30 include letter and number)</string>
    <string name="re_type_hint_password_create_account">Re-type Password*</string>
    <string name="or">or</string>
    <string name="agreement_registration">Read Geardo.com\'s Registration Agreement</string>
    <string name="signInWithSocialAccount">Sign in with your social account</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="already">Already have an account?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="create_an_account">Create an Acount</string>
    <string name="forgot_password">Forgor Password?</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_record_to_show">No Records to Show</string>
    <string name="btnRetry">Tap to Retry</string>

    <string name="tab_item_my_category">Categories</string>
    <string name="tab_item_last_purchase">Last Purchases</string>


    <!-- Text of the Filter menu icon -->
    <string name="description_cart">Cart</string>

    <!-- Text of the Filter menu icon -->
    <string name="description_item_view">View</string>

    <!-- Accessibility description for a control that allows the user to close the current screen
     and go back to the previous one. -->
    <string name="close_and_go_back">Close and go back</string>


    <string name="no_matching_product_available">No product available</string>

    <string name="title_product_detail">Product</string>
    <string name="title_cart_detail">Cart</string>

    <string name="add_to_cart_message">Price shown is approximate, only store price or offer price will be charged</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>


    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string-array name="tabs">
        <item>LATEST</item>
        <item>MOST VIEWED</item>
        <item>TRENDY</item>
        <item>ON SALE</item>
    </string-array>

    <string-array name="cats">
        <item>OVERVIEW</item>
        <item>RELATED</item>
        <item>ON SALE</item>
    </string-array>
    <string name="title_activity_facebook_login">FacebookLoginActivity</string>
</resources>
