<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context=".login.SignInActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/border_b"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCreateAcc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Create Account"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/ibClose"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="centerInside"
                android:background="@drawable/roundedbutton"
                android:src="@drawable/button_close_rounded" />
        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:hint="@string/signInWithSocialAccount"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal|center_vertical">

                <LinearLayout
                    android:id="@+id/ll_fb_signin"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/fb">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/button_facebook_login"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:visibility="gone" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal|center_vertical">


                <LinearLayout
                    android:id="@+id/ll_goo_signin"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/goo">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_sign_in_button"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:visibility="gone"
                        app:colorScheme="light" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/mainView"
                android:layout_width="@dimen/hundred_and_fifty"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/border_b" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/mainView"
                android:layout_toLeftOf="@+id/secondView"
                android:layout_toRightOf="@+id/mainView"
                android:layout_toStartOf="@+id/secondView"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:hint="@string/or"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/secondView"
                android:layout_width="@dimen/hundred_and_fifty"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/border_b" />


        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEnterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password_create_account"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/re_type_hint_password_create_account"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvReadAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/agreement_registration"
            android:textAlignment="center"
            android:textColor="@color/lightBlue"
            android:textColorHint="@color/lightBlue"
            android:textSize="13sp"
            android:theme="@style/RobotoTextViewStyle" />

        <Button
            android:id="@+id/create_new_account_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:background="@color/amber"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ffff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/already"
                android:textAlignment="center"
                android:textSize="13sp"
                android:theme="@style/RobotoTextViewStyle" />

            <TextView
                android:layout_toRightOf="@+id/ffff"
                android:id="@+id/tvSingIn"
                android:text="@string/sign_in"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textColor="@color/amber"
                android:layout_alignBottom="@+id/ffff"
                android:textColorHint="@color/amber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
